WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84996
Fix missing sourceState change on MEDIA_ERR_SOURCE_NOT_SUPPORTED error.
https://bugs.webkit.org/show_bug.cgi?id=84996
Summary
Fix missing sourceState change on MEDIA_ERR_SOURCE_NOT_SUPPORTED error.
Aaron Colwell
Reported
2012-04-26 13:04:07 PDT
In cases where appending data with webkitSourceAppend() triggers a MEDIA_ERR_SOURCE_NOT_SUPPORTED error, the m_sourceState was not being reset to SOURCE_CLOSED. This was causing future calls to webkitSourceAppend() after the error to actually make calls to m_player->sourceAppend() instead of throwing an INVALID_STATE_ERR exception like they were supposed to. This was causing crashes in Chromium because the code assumes that once it reports the error to WebKit it won't get any more calls to m_player->sourceAppend().
Attachments
Patch
(11.64 KB, patch)
2012-04-26 13:09 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aaron Colwell
Comment 1
2012-04-26 13:09:09 PDT
Created
attachment 139052
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-26 15:33:31 PDT
Comment on
attachment 139052
[details]
Patch Clearing flags on attachment: 139052 Committed
r115380
: <
http://trac.webkit.org/changeset/115380
>
WebKit Review Bot
Comment 3
2012-04-26 15:33:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug