Source/WebCore: Fix missing sourceState change on MEDIA_ERR_SOURCE_NOT_SUPPORTED error. https://bugs.webkit.org/show_bug.cgi?id=84996

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-26
Reviewed by Eric Carlson.

No new tests. http/tests/media/media-source/webm/video-media-source-errors.html was updated to verify that webkitSourceState is always SOURCE_CLOSED when the onerror event fires.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::noneSupported):

LayoutTests: Updating MediaSource layout test to verify that webkitSourceState is always
SOURCE_CLOSED when an error occurs.

Minor style fixes and informative console messages were also added.
https://bugs.webkit.org/show_bug.cgi?id=84996

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-26
Reviewed by Eric Carlson.

* http/tests/media/media-source/webm/video-media-source-errors-expected.txt:
* http/tests/media/media-source/webm/video-media-source-errors.html:

Canonical link: https://commits.webkit.org/102520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115380 268f45cc-cd09-0410-ab3c-d52691b4dbfc